<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">友颜</string>
    <string name="action_feed">意见反馈</string>
    <string name="action_group_chat">发起群聊</string>
    <string name="action_add_friend">添加朋友</string>
    <string name="action_scan">扫一扫</string>
    <string name="action_search">搜索</string>
    <string name="action_add">添加</string>
    <string name="tab_testface">测颜</string>
    <string name="tab_loverface">情侣相</string>
    <string name="tab_find">颜王</string>
    <string name="tab_me">我</string>
    <string name="page1_testface">测试颜值</string>
    <string name="page1_loversface">情侣相</string>
    <string name="page1_uglily">至少你还可以比丑；）</string>
    <string name="title_activity_test_face">牛津测颜值</string>
    <string name="choose_photo_source_camera">相机</string>
    <string name="choose_photo_source_gallery">相册</string>
</resources>
