<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:oxford="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/tabbg"
        android:orientation="horizontal">

        <com.computinglife.loverface.ui.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            oxford:icon_oxford="@mipmap/ic_menu_start_conversation"
            oxford:text="@string/tab_testface"
            oxford:text_size="12sp" />

        <com.computinglife.loverface.ui.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            oxford:icon_oxford="@mipmap/ic_menu_friendslist"
            oxford:text="@string/tab_contact"
            oxford:text_size="12sp" />

        <com.computinglife.loverface.ui.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            oxford:icon_oxford="@mipmap/ic_menu_emoticons"
            oxford:text="@string/tab_find"
            oxford:text_size="12sp" />

        <com.computinglife.loverface.ui.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            oxford:icon_oxford="@mipmap/ic_menu_allfriends"
            oxford:text="@string/tab_me"
            oxford:text_size="12sp" />
    </LinearLayout>

</LinearLayout>